# maumau

./: .gitignore  Makefile
cbb-upsets/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  ENGINEERING.STYLEGUIDE.md  Makefile  PROMPTS.md  PYTHON.STYLEGUIDE.md  README.md  pyproject.toml  requirements.txt
cbb-upsets/.codex/: config.toml
cbb-upsets/.continue/: config.json
cbb-upsets/.prompts/: architect_agent.md  devops_agent.md
cbb-upsets/agents/: implementer.toml  infra-implementer.toml  infra-researcher.toml  infra-verifier.toml  loop-orchestrator.toml  model-verifier.toml  roadmap-researcher.toml  ux-researcher.toml  ux-verifier.toml
cbb-upsets/chart/cbb-upsets/: .helmignore  Chart.yaml  values-local.yaml  values.yaml
cbb-upsets/chart/cbb-upsets/templates/: NOTES.txt  _helpers.tpl  ingress.yaml  middleware-deployment.yaml  middleware-service.yaml  nginx-configmap.yaml  nginx-deployment.yaml  runtime-secret.yaml  (+3 more)
cbb-upsets/data/: team_home_locations.csv
cbb-upsets/data/tournaments/: ncaa_men_2021.json  ncaa_men_2022.json  ncaa_men_2023.json  ncaa_men_2024.json  ncaa_men_2025.json  ncaa_men_2026.json
cbb-upsets/docs/: architecture.md  betting-model-design.md  infra-roadmap.md  model-implementation.md  model-improvement-roadmap.md  model.md  ui-ux-roadmap.md
cbb-upsets/docs/results/: best-model-3y-backtest.md  best-model-5y-backtest.md
cbb-upsets/frontend/: index.html  package-lock.json  package.json  vite.config.ts
cbb-upsets/frontend/src/: App.tsx  app.css  main.tsx
cbb-upsets/ops/: infra-loop-policy.toml  model-loop-policy.toml  ux-loop-policy.toml
cbb-upsets/plans/: current-optimization-plan.md  thread-roles.md
cbb-upsets/prompts/: daily-summary-thread.md  data_agent.md  docs-thread.md  implementation-thread.md  modeling_agent.md  triage-thread.md  validation-thread.md
cbb-upsets/scripts/: generate_team_home_locations.py  monitor_autonomous_loops.sh  run_autonomous_loops.py  run_infra_loops.py  test-postgres-forward.sh
cbb-upsets/sql/: schema.sql
cbb-upsets/src/cbb/: __init__.py  agent.py  autonomous_loop.py  cli.py  config.py  db.py  db_backup.py  infra_loop.py  repair.py  team_catalog.py  team_home_locations.py  verify.py
cbb-upsets/tests/: __init__.py  support.py  test_agent.py  test_artifacts.py  test_autonomous_loop.py  test_availability_ingest.py  test_availability_persistence.py  test_backtest_reoptimization.py  test_cli.py  test_closing_lines.py  test_dashboard_snapshot.py  test_dashboard_ui.py  test_db_backup.py  test_db_init.py  test_db_summary.py  test_db_views.py  test_features.py  test_hdintelligence_availability.py  test_historical_games.py  test_infra_loop.py  test_modeling.py  test_odds_api.py  test_persistence.py  test_policy.py  test_repair.py  test_report.py  test_team_catalog.py  test_team_home_locations.py  test_team_metrics.py  test_tournament.py  test_verify.py
(+61 files in other folders)
