[project]
name = "cbb-upsets"
version = "0.1.0"
description = "College basketball upsets predictor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
    "typer>=0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "streamlit>=1.0",
]

[project.scripts]
cbb = "cbb.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
